--- a/smart-pot/src/assets/css/ManagePlants.css
+++ b/smart-pot/src/assets/css/ManagePlants.css
@@ -1,4 +1,3 @@
-/* Import Google font - Poppins */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
 * {
   margin: 0;
@@ -13,7 +12,7 @@ body {
 }
 .container {
   position: absolute;
-  top: 19.5rem;
+  top: 15rem;
   left: 50%;
   transform: translate(-50%, -50%);
   max-width: 430px;
@@ -23,26 +22,64 @@ body {
   box-shadow: 4px 4px 16px #e1e1e1;
   transition: height 1s ease-in;
 }
-.container .registration {
-  display: none;
-}
-#check:checked ~ .registration {
-  display: block;
-}
-#check:checked ~ .login {
-  display: none;
-}
-#check {
-  display: none;
-}
+
 .container .form {
-  padding: 0rem;
+  padding: 2rem;
 }
 .form header {
   font-size: 2rem;
   font-weight: 500;
   text-align: center;
+  margin-bottom: 1.5rem;
 }
+
+.info,
+.info__container {
+  display: grid;
+}
+
+.info__card,
+.info__data {
+  display: flex;
+  align-items: center;
+}
+
+.info__card {
+  width: 360px;
+  justify-content: space-between;
+  padding: 0.75rem 1.25rem 0.75rem 0.75rem;
+  background-color: var(--first-color-lighten);
+  box-shadow: 4px 4px 16px #e1e1e1, -2px -2px 16px #fff;
+  border-radius: 2.5rem;
+  cursor: pointer;
+}
+
+.info__card:hover {
+  animation: jiggle1 0.2s;
+}
+
+.info__card:active {
+  transform: translateY(4px);
+  box-shadow: 4px 4px 16px #d4d4d4, -2px -2px 16px #fff;
+}
+.info__img {
+  width: 55px;
+  height: 55px;
+  border-radius: 50%;
+  margin-right: 1rem;
+}
+
+.info__name {
+  font-size: var(--normal-font-size);
+  color: var(--first-color);
+  font-weight: 500;
+}
+
+.info__id {
+  font-size: var(--smaller-font-size);
+  color: var(--first-color-light);
+}
+
 .form input {
   height: 60px;
   width: 100%;
@@ -83,14 +120,27 @@ body {
 .form input.button:hover {
   background: rgb(93, 150, 95);
 }
-.signup {
-  font-size: 17px;
-  text-align: center;
-}
-.signup label {
-  color: #009579;
+
+.form input.buttonDel {
+  color: #fff;
+  background: rgb(255, 145, 0);
+  font-size: 1.2rem;
+  font-weight: 500;
+  letter-spacing: 1px;
   cursor: pointer;
+  transition: 0.4s;
+  box-shadow: 4px 4px 16px #e1e1e1, -2px -2px 16px #fff;
 }
-.signup label:hover {
-  text-decoration: underline;
+.form input.buttonDel:hover {
+  background: rgb(255, 81, 0);
+}
+
+.form input.buttonDel.active {
+  transform: translateY(4px);
+  background: rgb(255, 81, 0);
+  box-shadow: 4px 4px 16px #d4d4d4, -2px -2px 16px #fff;
+}
+
+.jigglele {
+  animation: jiggle2 0.2s infinite;
 }
