--- a/smart-pot/src/assets/css/Modal.css
+++ b/smart-pot/src/assets/css/Modal.css
@@ -26,3 +26,16 @@
   width: 400px; /* Or whatever width you want */
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
+
+.modal_big {
+  position: absolute;
+  top: 19.5rem;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 430px;
+  width: 100%;
+  background: #f8f8fc;
+  border-radius: 2rem;
+  box-shadow: 4px 4px 16px #e1e1e1;
+  transition: height 1s ease-in;
+}
