--- a/smart-pot/src/assets/css/App.css
+++ b/smart-pot/src/assets/css/App.css
@@ -13,6 +13,7 @@
   --body-font: "Ubuntu", sans-serif;
   --normal-font-size: 1rem;
   --smaller-font-size: 0.813rem;
+  --even-smaller-font-size: 0.7rem;
 }
 
 /*===== BASE =====*/
@@ -86,6 +87,7 @@ img {
   background-color: #f8f8fc;
   box-shadow: 4px 4px 16px #e1e1e1;
   width: 26.5rem;
+  min-height: 15rem;
 }
 
 .drop__container.with-shade::before {
