--- a/smart-pot/src/assets/css/ManagePlants.css
+++ b/smart-pot/src/assets/css/ManagePlants.css
@@ -12,7 +12,7 @@ body {
 }
 .container {
   position: absolute;
-  top: 15rem;
+  top: 27rem;
   left: 50%;
   transform: translate(-50%, -50%);
   max-width: 430px;
@@ -36,6 +36,7 @@ body {
 .info,
 .info__container {
   display: grid;
+  row-gap: 1rem;
 }
 
 .info__card,
@@ -76,8 +77,9 @@ body {
 }
 
 .info__id {
-  font-size: var(--smaller-font-size);
+  font-size: var(--even-smaller-font-size);
   color: var(--first-color-light);
+  font-weight: 500;
 }
 
 .form input {
@@ -143,4 +145,34 @@ body {
 
 .jigglele {
   animation: jiggle2 0.2s infinite;
+}
+
+h2 {
+  margin: 0;
+  display: inline-block;
+}
+
+.addPlant-sign {
+  transition: all 0.2s ease-in-out;
+}
+
+.addPlant-sign:active {
+  transform: translateY(4px);
+}
+
+.addDevice-sign {
+  transition: all 0.2s ease-in-out;
+}
+
+.addDevice-sign:active {
+  transform: translateY(4px);
+}
+
+.tooltip {
+  padding: 5px 10px;
+  background: #f8f8fc;
+  color: rgb(49, 49, 49);
+  border-radius: 5px;
+  box-shadow: 4px 4px 16px #e1e1e1;
+  font-size: 12px;
 }
