--- a/smart-pot/src/assets/css/ManagePlants.css
+++ b/smart-pot/src/assets/css/ManagePlants.css
@@ -11,12 +11,14 @@ body {
   background: #f8f8fc;
 }
 .container {
-  position: absolute;
-  top: 27rem;
+  position: fixed;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   max-width: 430px;
   width: 100%;
+  max-height: 80vh; /* Adjust as necessary */
+  overflow-y: auto; /* Enable vertical scroll within the container */
   background: #f8f8fc;
   border-radius: 2rem;
   box-shadow: 4px 4px 16px #e1e1e1;
@@ -29,8 +31,10 @@ body {
 .form header {
   font-size: 2rem;
   font-weight: 500;
-  text-align: center;
-  margin-bottom: 1.5rem;
+  display: inline-block;
+  width: 100%;
+  text-align: left;
+  padding-bottom: 1rem;
 }
 
 .info,
@@ -175,4 +179,8 @@ h2 {
   border-radius: 5px;
   box-shadow: 4px 4px 16px #e1e1e1;
   font-size: 12px;
+}
+
+li.info__card:not(:last-child) {
+  margin-bottom: 1rem;
 }
