--- a/smart-pot/src/assets/css/ManagePlants.css
+++ b/smart-pot/src/assets/css/ManagePlants.css
@@ -15,10 +15,9 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  max-width: 430px;
+  max-width: 50vw;
   width: 100%;
-  max-height: 80vh; /* Adjust as necessary */
-  overflow-y: auto; /* Enable vertical scroll within the container */
+
   background: #f8f8fc;
   border-radius: 2rem;
   box-shadow: 4px 4px 16px #e1e1e1;
@@ -39,8 +38,18 @@ body {
 
 .info,
 .info__container {
-  display: grid;
-  row-gap: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.info__container ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: start;
+  padding: 0;
+  margin: 0;
+  width: 100%;
 }
 
 .info__card,
@@ -50,13 +59,17 @@ body {
 }
 
 .info__card {
-  width: 360px;
+  flex-basis: calc(
+    50% - 1rem
+  ); /* Adjust this value as per your requirement, 1rem here allows for some gap between the cards */
   justify-content: space-between;
+  min-width: 300px;
   padding: 0.75rem 1.25rem 0.75rem 0.75rem;
   background-color: var(--first-color-lighten);
   box-shadow: 4px 4px 16px #e1e1e1, -2px -2px 16px #fff;
   border-radius: 2.5rem;
   cursor: pointer;
+  margin: 0.5rem; /* adds a little gap around each card */
 }
 
 .info__card:hover {
