--- a/smart-pot/src/assets/css/App.css
+++ b/smart-pot/src/assets/css/App.css
@@ -14,6 +14,7 @@
   --normal-font-size: 1rem;
   --smaller-font-size: 0.813rem;
   --even-smaller-font-size: 0.7rem;
+  --screen-size: 50vh;
 }
 
 /*===== BASE =====*/
