1# Fixed navigating on login and logout 2# Added possibility to change API url on login form 3# added new animations

--- a/smart-pot/src/assets/css/ManagePlants.css
+++ b/smart-pot/src/assets/css/ManagePlants.css
@@ -171,7 +171,7 @@ body::-webkit-scrollbar {
   box-shadow: 4px 4px 16px #d4d4d4, -2px -2px 16px #fff;
 }
 
-.jigglele {
+.jiggle-card {
   animation: jiggle2 0.2s infinite;
 }
 
