--- a/smart-pot/src/assets/css/App.css
+++ b/smart-pot/src/assets/css/App.css
@@ -211,6 +211,17 @@ img {
   }
 }
 
+@keyframes jiggle3 {
+  0% {
+    transform: rotate(0.75deg);
+    animation-timing-function: ease-in;
+  }
+  50% {
+    transform: rotate(-0.9deg);
+    animation-timing-function: ease-out;
+  }
+}
+
 .no-animations * {
   animation-name: none !important;
 }
@@ -278,4 +289,26 @@ img {
 
 .block-interaction * {
   pointer-events: auto;
+}
+
+.jiggle-sensord-card {
+  animation: jiggle3 0.2s infinite, pulse 1.2s infinite;
+}
+
+@keyframes pulse {
+  0% {
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+  }
+  25% {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+  }
+  50% {
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.35);
+  }
+  75% {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+  }
+  100% {
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+  }
 }
