--- a/smart-pot/src/assets/css/Login.css
+++ b/smart-pot/src/assets/css/Login.css
@@ -35,6 +35,19 @@ body {
 #check {
   display: none;
 }
+#check-reset {
+  display: none;
+}
+
+/* Show Reset form when checked */
+#check-reset:checked ~ .reset {
+  display: block;
+}
+
+#check-reset:checked ~ .login,
+#check-reset:checked ~ .registration {
+  display: none;
+}
 .container .form {
   padding: 2rem;
 }
@@ -92,5 +105,13 @@ body {
   cursor: pointer;
 }
 .signup label:hover {
+  text-decoration: underline;
+}
+
+.link {
+  color: #009579;
+  cursor: pointer;
+}
+.link:hover {
   text-decoration: underline;
 }
