--- a/smart-pot/src/assets/css/App.css
+++ b/smart-pot/src/assets/css/App.css
@@ -65,7 +65,7 @@ img {
 .drop__background {
   position: absolute;
   left: 50% - (width/2);
-  top: 6rem;
+  top: 3rem;
   width: 26.5rem;
   border-top-left-radius: 2rem;
   border-top-right-radius: 2rem;
@@ -77,7 +77,7 @@ img {
 
 .drop__container {
   position: absolute;
-  top: 26rem;
+  top: 23rem;
   row-gap: 1rem;
   padding: 2rem;
   left: 50% - (width/2);
@@ -251,7 +251,8 @@ img {
 .image-gallery {
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
+  justify-content: center;
+  gap: 30px;
   margin-bottom: 1rem;
 }
 
