--- a/smart-pot/src/assets/css/ManagePlants.css
+++ b/smart-pot/src/assets/css/ManagePlants.css
@@ -22,9 +22,9 @@ body::-webkit-scrollbar {
 }
 .manageContainer {
   position: fixed;
-  top: 60%;
+  top: 50%;
   left: 50%;
-  transform: translate(-50%, -60%);
+  transform: translate(-50%, -50%);
   max-width: var(--screen-size);
   max-height: 100vh;
   width: 100%;
@@ -35,7 +35,47 @@ body::-webkit-scrollbar {
   transition: height 1s ease-in;
 }
 
+.statisticsContainer {
+  position: fixed;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -60%);
+  max-width: var(--screen-size);
+  min-height: 50vh;
+  max-height: 100vh;
+  width: 100%;
+  overflow: auto;
+  background: #f8f8fc;
+  border-radius: 2rem;
+  box-shadow: 4px 4px 16px #e1e1e1;
+  transition: height 1s ease-in;
+}
+
+.settingsContainer {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: var(--screen-size);
+  min-height: 78vh;
+  max-height: 100vh;
+  width: 100%;
+  overflow: auto;
+  background: #f8f8fc;
+  border-radius: 2rem;
+  box-shadow: 4px 4px 16px #e1e1e1;
+  transition: height 1s ease-in;
+}
+
 .manageContainer .form {
+  padding: 2rem;
+}
+
+.settingsContainer .form {
+  padding: 2rem;
+}
+
+.statisticsContainer .form {
   padding: 2rem;
 }
 .form header {
@@ -57,7 +97,7 @@ body::-webkit-scrollbar {
 .info__container ul {
   display: flex;
   flex-wrap: wrap;
-  justify-content: start;
+  justify-content: flex-start;
   padding: 0;
   margin: 0;
   width: 100%;
@@ -94,6 +134,13 @@ body::-webkit-scrollbar {
 .info__img {
   width: 55px;
   height: 55px;
+  border-radius: 50%;
+  margin-right: 1rem;
+}
+
+.info__img_small {
+  width: 35px;
+  height: 35px;
   border-radius: 50%;
   margin-right: 1rem;
 }
