--- a/smart-pot/src/assets/css/App.css
+++ b/smart-pot/src/assets/css/App.css
@@ -26,7 +26,6 @@
 }
 
 body {
-  zoom: reset;
   width: 100%;
   margin: 0;
   padding: 0;
@@ -77,13 +76,15 @@ img {
 
 .drop__container {
   position: absolute;
-  top: 23rem;
+  top: 21.5rem;
   row-gap: 1rem;
   padding: 2rem;
   left: 50% - (width/2);
-  padding-top: 5rem;
-  border-top-left-radius: 2rem;
+  padding-top: 2rem;
+  border-top-left-radius: 1.5rem;
   border-top-right-radius: 2rem;
+  border-bottom-left-radius: 2rem;
+  border-bottom-right-radius: 2rem;
   background-color: #f8f8fc;
   box-shadow: 4px 4px 16px #e1e1e1;
   width: 26.5rem;
@@ -254,6 +255,15 @@ img {
   justify-content: center;
   gap: 30px;
   margin-bottom: 1rem;
+}
+@media only screen and (max-width: 767px) {
+  .image-gallery {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+    margin-bottom: 1rem;
+  }
 }
 
 .gallery-image {
