--- a/smart-pot/src/assets/css/ManagePlants.css
+++ b/smart-pot/src/assets/css/ManagePlants.css
@@ -57,6 +57,22 @@ body::-webkit-scrollbar {
   transition: height 1s ease-in;
 }
 
+.chartContainer {
+  position: fixed;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -60%);
+  max-width: var(--screen-size);
+  min-height: 80vh;
+  max-height: 100vh;
+  width: 100%;
+  overflow: auto;
+  background: #f8f8fc;
+  border-radius: 2rem;
+  box-shadow: 4px 4px 16px #e1e1e1;
+  transition: height 1s ease-in;
+}
+
 .settingsContainer {
   position: fixed;
   top: 50%;
